# Practic

./: CMakeLists.txt  main.cpp
mylibrary/: CMakeLists.txt  mylibrary.cpp  mylibrary.h
ptdGame/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  GameManager.cpp  GameManager.h  Interpreter.cpp  Interpreter.h  MainMenu.cpp  MainMenu.h  ptdGame.cpp  ptdGame.h
